--- a/isometric/isometric.html
+++ b/isometric/isometric.html
@@ -11,12 +11,12 @@
             display: flex;align-items: center;justify-content: center;
             flex-direction:column;
         }
-        h2{font-size:50px; letter-spacing: 4px;}
+        h2{font-size:50px; letter-spacing: 4px;color:red;
+            position:relative; z-index:2;}
         .container{
             position:relative;
             width:360px;
-            height:540px;
-            margin-top:150px;
+            height:700px;
             background:rgba(0,0,0,.1);
             transform:rotate(-30deg) skew(25deg)scale(.8);
             transition:0.5s;
@@ -24,6 +24,7 @@
         .container img{
             position:absolute;
             width:100%;
+            height:100%;
             transition:.5s;
         }
         .container:hover img:nth-child(4){
