--- a/isometric/isometric.html
+++ b/isometric/isometric.html
@@ -10,6 +10,7 @@
             margin:0;padding:0;width:100%;height:100vh;
             display: flex;align-items: center;justify-content: center;
             flex-direction:column;
+            background:rgb(21, 84, 84);
         }
         h2{font-size:50px; letter-spacing: 4px;color:red;
             position:relative; z-index:2;}
